디자인 수정

--- a/main_admin.html
+++ b/main_admin.html
@@ -5,96 +5,16 @@
   <title>준주서의 육아일기 (Admin)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f0f2f5;
-      color: #333;
-    }
-    header {
-      background-color: #007bff;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 15px;
-    }
-    header h1 {
-      margin: 0;
-    }
-    #homeBtn {
-      background-color: #0056b3;
-      color: white;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      font-size: 16px;
-    }
-    nav {
-      background-color: #fff;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      padding: 15px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-    }
-    nav a {
-      text-decoration: none;
-      color: #007bff;
-      font-weight: bold;
-      font-size: 16px;
-      transition: color 0.2s ease;
-      cursor: pointer;
-    }
-    nav a:hover {
-      color: #0056b3;
-    }
-    .main-content {
-      padding: 50px 20px;
-      text-align: center;
-      min-height: 400px;
-      background: white;
-      max-width: 1400px;
-      margin: 20px auto;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    }
-    footer {
-      margin-top: 80px;
-      text-align: center;
-      padding: 15px;
-      font-size: 14px;
-      color: #888;
-    }
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        gap: 10px;
-      }
-    }
-    .logout-btn {
-      position: absolute;
-      top: 15px;
-      right: 15px;
-      background-color: #dc3545;
-      color: white;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-    }
+
   </style>
+  <link rel="stylesheet" href="style/basic.css">
 </head>
 <body>
 
   <header>
     <h1>준주서의 홈페이지</h1>
-    <button id="homeBtn">홈</button> 
+    <button id="homeBtn">홈</button>
+    <button id="logoutBtn" class="logout-btn">로그아웃</button>
   </header>
 
   <nav>
@@ -102,8 +22,6 @@
     <a href="#" data-page="member/user-management.html">회원관리</a>
     <a href="#" data-page="member/login.html">로그인</a>
   </nav>
-
-  <button id="logoutBtn" class="logout-btn" style="display:none;">로그아웃</button>
 
   <div id="main-content" class="main-content">
     <h2>환영합니다!</h2>
